[temp] buddy list: Split key list into keys for each of the two sections.
This is a temp commit, since it needs to be squashed into the
main commit since they are not functionally separate.

But I'm splitting them up for ease of reviewing.

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -531,6 +531,7 @@ body {
     --color-text-search: hsl(0deg 0% 100% / 75%);
     --color-text-search-hover: hsl(0deg 0% 100%);
     --color-text-search-placeholder: hsl(0deg 0% 100% / 50%);
+    --color-text-empty-list-message: hsl(0deg 0% 67%);
     --color-text-dropdown-menu: hsl(0deg 0% 100% / 80%);
     --color-text-full-name: hsl(0deg 0% 100%);
     --color-text-item: hsl(0deg 0% 50%);
