--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -275,6 +275,8 @@ body {
     --color-text-personal-menu-no-status: hsl(0deg 0% 50%);
     --color-text-personal-menu-some-status: hsl(0deg 0% 40%);
     --color-text-sidebar-heading: hsl(0deg 0% 43%);
+    --color-text-url: hsl(200deg 100% 40%);
+    --color-text-url-hover: hsl(200deg 100% 25%);
 
     /* Markdown code colors */
     --color-markdown-code-text: hsl(0deg 0% 0%);
@@ -546,6 +548,7 @@ body {
         hsl(0deg 0% 75%) 75%,
         hsl(0deg 0% 11%)
     );
+    --color-text-url-hover: hsl(200deg 79% 66%);
 
     /* Markdown code colors */
     /* Note that Markdown code-link colors are identical
